# raven

./: .cruft.json  .dockerignore  .editorconfig  .flake8  .gitattributes  .gitignore  .lfsconfig  .pre-commit-config.yaml  .pylintrc.toml  .readthedocs.yml  .scaraplate.conf  .travis.yml  .zenodo.json  .zizmor.yml  AUTHORS.rst  BirdyTestdata.py  Birdy_test.py  CHANGELOG.rst  CHANGES.rst  CONTRIBUTING.rst  Dockerfile  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.rst  RegionalisationHydrograph.nc  client_environment.yml  docker-compose.yml  environment-dev.yml  environment-docs.yml  environment.yml  pyproject.toml  pywps.pid  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  dependabot.yml  labeler.yml
.github/workflows/: auto-accept-ci-changes.yml  bump-version.yml  codeql.yml  docker-publish.yml  docker-testing.yml  label.yml  main.yml  publish-pypi.yml  tag-testpypi.yml
CI/: requirements_ci.in  requirements_ci.txt
docs/: Makefile  cookiecutter_input.json
docs/source/: .gitignore  conf.py  configuration.rst  dev_guide.rst  developer.rst  getting_started.rst  index.rst  installation.rst  output_sanitize.cfg  processes.rst
docs/source/notebooks/: 00_Introduction_to_JupyterLab.ipynb  01_Getting_watershed_boundaries.ipynb  01_Introduction_to_RavenPy.ipynb  02_Emulating_hydrological_models.ipynb  02_Extract_geographical_watershed_properties.ipynb  03_Extract_geographical_watershed_properties.ipynb  03_Extracting_forcing_data.ipynb  04_Delineating_watersheds.ipynb  05_Advanced_RavenPy_configuration.ipynb  05_Extracting_external_data.ipynb  06_Raven_calibration.ipynb  07_Bias_correction_of_CMIP6_data.ipynb  07_Making_and_using_hotstart_files.ipynb  08_Getting_and_bias_correcting_CMIP6_data.ipynb  08_Making_and_using_hotstart_files.ipynb  09_Hydrological_impacts_of_climate_change.ipynb  10_Data_assimilation.ipynb  11_Climatological_ESP_forecasting.ipynb  12_Performing_hindcasting_experiments.ipynb  Assess_probabilisitc_flood_risk.ipynb  Assess_probabilistic_flood_risk.ipynb  Bias_correcting_climate_data.ipynb  Climatological_ESP_forecasting.ipynb  Comparing_hindcasts_and_ESP_forecasts.ipynb  CompleteChain.ipynb  CompleteChainCANOPEX.ipynb  CompleteChainNRCAN.ipynb  Delineation_workflow.ipynb  Full_process_example_1.ipynb  (+38 more)
etc/: sample-custom.cfg
examples/: raven_dem.py
processes/: wps_watershed_delineation.py
raven/: __init__.py  __version__.py  cli.py  config.py  default.cfg  gis.py  rasterio.py  tutorial.py  utilities.py  utils.py  wsgi.py
raven/LHMP_models/: README.rst  cema_neige.py  gr4j_cemaneige.py
raven/hpc_interface/: HPC_demo.ipynb  Ost-RAVEN.sh  batch_template.txt  constants.py  hpc_connection.py  main.py  raven_process.py
raven/models/: README.rst  __init__.py  base.py  basic.py  basic_ostrich.py  cema_neige.py  emulators.py  global_models.py  gr2m.py  gr4j_cemaneige.py  hbv.py  multimodel.py  rv.py  simhyd_cemaneige.py  state.py
raven/processes/: __init__.py  base_xclim.py  common.py  entrypoint_regionalization.py  ravenio.py  regionalization_methods.py  regionalization_tools.py  wps_area_stats.py  wps_climatology_esp.py  wps_climpred_forecast_verification.py  wps_forecast_evaluation.py  wps_forecast_flood_risk.py  wps_generic_raster_subset.py  wps_generic_shape_area.py  wps_generic_shape_properties.py  wps_generic_terrain_analysis.py  wps_generic_zonal_stats.py  wps_get_geomet_forecasts.py  wps_gr4j_cemaneige.py  wps_graph_ensemble_uncertainty.py  wps_graph_fit.py  wps_graph_forecast_uncertainty.py  wps_graph_objective_function_fit.py  wps_graph_single_hydrograph.py  wps_hindcast.py  wps_hydrobasins_shape_selection.py  wps_indicator_analysis.py  wps_inout.py  wps_nalcms_zonal_stats.py  wps_nalcms_zonal_stats_raster.py  wps_objective_functions.py  wps_ostrich.py  wps_ostrich_gr4j_cemaneige.py  wps_ostrich_hbv_ec.py  wps_ostrich_hmets.py  wps_ostrich_mohyse.py  wps_q_stats.py  wps_raven.py  wps_raven_gr4j_cemaneige.py  wps_raven_hbv_ec.py  (+11 more)
raven/singularity/: README  README.md  get_ostrich.sh  get_raven.sh  prepare_simg.sh  prepare_simg_ostrich.sh  ubuntu.def  ubuntu_ostrich.def
raven/utilities/: RavenAssimilation.py  __init__.py  analysis.py  checks.py  coords.py  data_assimilation.py  forecasting.py  geo.py  geoserver.py  gis.py  graphs.py  io.py  mk_test.py  regionalization.py  testdata.py
src/raven/: __init__.py  __version__.py  cli.py  config.py  default.cfg  utils.py  wsgi.py
srcRAVEN/: .depend  Abstraction.cpp  Abstraction.h  Advection.cpp  Advection.h  Albedo.h  AquiferStack.cpp  Assimilate.cpp  Baseflow.cpp  CapillaryRise.cpp  ChannelXSect.cpp  ChannelXSect.h  CommonFunctions.cpp  Convolution.cpp  Convolution.h  CropGrowth.cpp  CropGrowth.h  CustomOutput.cpp  CustomOutput.h  Decay.cpp  Decay.h  DepressionProcesses.cpp  DepressionProcesses.h  Diagnostics.cpp  Diagnostics.h  Evaporation.cpp  Flush.cpp  ForcingGrid.cpp  ForcingGrid.h  Forcings.cpp  Forcings.h  Gauge.cpp  Gauge.h  GlacierProcesses.cpp  GlacierProcesses.h  GlobalParams.cpp  GlobalParams.h  GreenAmpt.cpp  HRUGroups.cpp  HydroProcessABC.cpp  (+93 more)
tests/: __init__.py  common.py  conftest.py  test.cfg  test_ECCC_forecast.py  test_ERA5.py  test_LHMP_models.py  test_NRCAN_daily.py  test_base.py  test_basic.py  test_bias_correction.py  test_data_assimilation.py  test_emulators.py  test_get_files.py  test_gis.py  test_graphs.py  test_hindcasting.py  test_raven_multi_model.py  test_ravenio.py  test_regionalisation.py  test_rv.py  test_utilities.py  test_wps_caps.py  test_wps_client.py  test_wps_climatology_esp.py  test_wps_climpred_hindcast_verification.py  test_wps_era5.py  test_wps_forecast_evaluation.py  test_wps_forecast_flood_risk.py  test_wps_forecast_graphs.py  test_wps_g4j_cemaneige.py  test_wps_generic_raster_subset.py  test_wps_generic_shape_area.py  test_wps_generic_shape_properties.py  test_wps_generic_terrain_analysis.py  test_wps_generic_zonal_stats.py  test_wps_get_geomet_forecasts.py  test_wps_gr4j_cemaneige.py  test_wps_graph_fit.py  test_wps_graph_tsstats.py  (+24 more)
tests/testdata/: solution.rvc
(+196 files in other folders)
