[bumpversion]
current_version = 0.9.0
commit = False
tag = False
parse = (?P<major>\d+)\.(?P<minor>\d+).(?P<patch>\d+)(\-(?P<release>[a-z]+))?
serialize = 
	{major}.{minor}.{patch}-{release}
	{major}.{minor}.{patch}

[metadata]
description-file = README.rst

[bumpversion:part:release]
optional_value = final
values = 
	beta
	final

[bumpversion:file:raven/__init__.py]
search = __version__ = {current_version}
replace = {new_version}

[bumpversion:file:docs/source/conf.py]
search = release = {current_version}
replace = {new_version}

[bumpversion:file:Dockerfile]
search = Version={current_version}
replace = {new_version}

[tool:pytest]
addopts = 
	--strict
	--tb=native
python_files = test_*.py
norecursedirs = src .git bin
markers = 
	online: mark test to need internet connection
	slow: mark test to be slow

[flake8]
ignore = F401,E402,E401, W503
max-line-length = 120
exclude = 
	.git,
	__pycache__,
	docs/source/conf.py,
	build,
	dist,
	src,

[doc8]
ignore-path = docs/build,docs/source/_templates,docs/source/_static
max-line-length = 120

