[bumpversion]
current_version = 0.12.1-beta
commit = False
tag = False
parse = (?P<major>\d+)\.(?P<minor>\d+).(?P<patch>\d+)(\-(?P<release>[a-z]+))?
serialize =
	{major}.{minor}.{patch}-{release}
	{major}.{minor}.{patch}

[metadata]
description-file = README.rst

[bumpversion:file:raven/__version__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bumpversion:part:release]
optional_value = final
values =
	beta
	final

[bumpversion:file:docs/source/conf.py]
parse = version|release = {current_version}
replace = {new_version}

[bumpversion:file:Dockerfile]
search = Version="{current_version}"
replace = Version="{new_version}"

[bumpversion:file:.cruft.json]
search = "version": "{current_version}",
replace = "version": "{new_version}",

[isort]
profile = black

[tool:pytest]
addopts =
	--strict-markers
	--tb=native
python_files = test_*.py
norecursedirs = src .git bin
markers =
	online: mark test to need internet connection
	slow: mark test to be slow

[flake8]
ignore =
	C901
	E203
	E231
	E266
	E501
	F401
	F403
	W503
	W504
max-line-length = 88
max-complexity = 12
exclude =
	.git,
	__pycache__,
	docs/source/conf.py,
	build,
	dist,
	src,
	.eggs,

[doc8]
ignore-path = docs/build,docs/source/_templates,docs/source/_static
max-line-length = 120
