[bumpversion]
current_version = 0.16.0
commit = True
tag = False

[bumpversion:file:raven/__version__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bumpversion:file:docs/source/conf.py]
parse = version|release = {current_version}
replace = {new_version}

[bumpversion:file:Dockerfile]
search = Version="{current_version}"
replace = Version="{new_version}"

[bumpversion:file:.cruft.json]
search = "version": "{current_version}",
replace = "version": "{new_version}",

[metadata]
description-file = README.rst

[isort]
profile = black
py_version = 38
append_only = true

[coverage:run]
relative_files = True

[aliases]
test = pytest

[tool:pytest]
collect_ignore =
	setup.py
addopts =
	--color=yes
	--verbose
	--strict-markers
	--tb=native
	--numprocesses=auto
	--maxprocesses=4
python_files = test_*.py
norecursedirs = src .git bin
markers =
	online: mark test to need internet connection
	slow: mark test to be slow

[flake8]
ignore =
	C901
	E203
	E231
	E266
	E501
	F401
	F403
	W503
	W504
max-line-length = 88
max-complexity = 12
exclude =
	.git,
	__pycache__,
	docs/source/conf.py,
	build,
	dist,
	src,
	.eggs,
